@@ -2,6 +2,8 @@ Revision history for Git::Annex
 
 {{$NEXT}}
     - annex-review-unused: Add missing prompt_yn subroutine.
+    - annex-review-unused: Always pass --force to 'git annex dropunused'.
+      Previously it couldn't be passed at all, which is much less useful.
 
 0.004     2020-03-18 17:08:57-07:00 America/Phoenix
     - annex-to-annex-dropunused: Fix attempt to call wrong main()
